K8S/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reddit
  labels:
    app: reddit
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reddit
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: reddit
    spec:
      containers:
      - name: reddit-container
        image: fouedtra/reddit:latest
        ports:
        - containerPort: 80
